2009-03-21  Dieter Lunn  <coder2000@gmail.com>

	* net/AsyncSocket.cs: removed an unncessary logging command

2009-03-20  Dieter Lunn  <coder2000@gmail.com>

	* common/SASL/MD5Processor.cs: Fixed a bug from the name change.  It had changed required xmpp names to ubiety.
	* In general there are alot of fixes and minor changes.

2009-01-07  Dieter Lunn <coder2000@gmail.com>

	* common/XID.cs: Added XEP-0106 JID Escaping and NUnit testing.

2008-11-09  Dieter Lunn <coder2000@gmail.com> 

	* ChangeLog: All changes should be in here including refactoring
	  ProtocolState to singleton and ProtocolParser.Parse to static.  Visual
	  Studio solution may not be up to date on current file arrangment.

2008-10-27  Dieter Lunn <coder2000@gmail.com>

	* net/AsyncSocket.cs: Added compression.  Still not working but close.  It negotiates properly but as MonoDevelop doesn't trap all uncaught exceptions its hard to tell where the error is occuring.

2008-10-26  Dieter Lunn <coder2000@gmail.com>

	* registries/CompressionRegistry.cs: Working on adding compression streams.

	* Errors.cs: Added a new singleton class to handle bringing errors to the top.

	* ProtocolParser.cs: Changed the parse method to static removing the need to create an instance.

	* XMPP.cs: Removed unnecessary events for sockets and protocol parser.

	* states/ProtocolState.cs: Changed to a singleton and added compression features.

2008-10-23  Dieter Lunn <coder2000@gmail.com>

	* ProtocolParser.cs: Removed unnessary #if statements.

	* registries/TagRegistry.cs: Removed the need for the add tag methods.  AddAssembly adds to the hashtable on its own.

2008-06-16  Dieter Lunn <coder2000@gmail.com> 

	* Moved XmppTagAttribute to xmpp.attributes namespace allowing for further attributes to be added.
	* Started work on XEP-0138 Stream Compression

2008-06-05  Dieter Lunn <coder2000@gmail.com> 

	* net/AsyncSocket.cs: Updated the file for Mono 2.0 which supports SslStream